[package]
name = "hdr-rust"
version = "0.1.0"
authors = ["yucwang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.4.0"
opencv = {version = "0.33", default-features = false, features = ["opencv-4", "contrib"]}
